force-app/main/default/objects/FloorPlan__c/FloorPlan__c.object-meta.xml
<CustomObject>
    <label>Planos</label>
    <nameField>
        <label>Nombre de Floor Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floor Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>